# math

./: .gitignore  6.ipynb
2/: 2.aux  2.tex
Calculus/DifIntFunctions/: 1_lab.py  6.py  6_lab.ipynb  main.py
CloudCalculation/1_lab_helloworld/: main.cu
CloudCalculation/3_lab_randomnumbers/: main.cu
Cuda/1_lab_Matrixes/: main.cu
Cuda/2_lab_concrete/: sort.cu
Cuda/3_lab_pi/: pi.cu
DVORAN/: main.py
DifEq/: hurwitz.py
EMP/2_lab_Furie/: Coefs.py  main.py
Manim/fields/: main.py  mplField.py
MathModels/1_Heater/: Heater.py
MathModels/2_Lotki-Voltera/: main.py
MathModels/3_pembulum/: pendulum.py
MathModels/4_rotation_motion/: main.py
MathModels/5_1d_convection/: 1d_conv.py
MathModels/6_convection/: .gitignore  fin_dif.py  index.ipynb  lagr.py
NN/1_lab/: digits.ipynb
NN/2_lab/: NN_from_scratch.ipynb
NN/pract_1/: 1.ipynb
NN/pract_2/: index.ipynb
NN/rbf/: RBF_sample.ipynb
TEX_tamplate/: main.tex  rpz.tex
calculus/kr/: 1.aux  2.aux  2.dvi  2.tex  main.aux  main.tex
calculus/labs/: 3_lab.py  4_lab.py  5_lab.py  7.py  main.py
course_project/: data.json  plotting.py  review.docx  summerPract.docx  summerPract_cutted.docx  заявление_на_практику.odt
course_project/TEX/: 12-intro.tex  13-intro-2.tex  20-analysis.tex  40-algo.tex  50-research.tex  80-end.tex  G2-105.sty  G7-32.cls  G7-32.sty  MainUI.tex  annotation.tex  (+17 more)
optimization/: 1Lab.py  2Lab.py  3Lab.py  4Lab.py
os/6_lab/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  qtwebclient.cpp  qtwebclient.h  untitled.pro
terver/: terver.tex
вычмат/: vm0_1.m
тфкп/: 1.aux  1.tex  1.toc
(+301 files in other folders)
